src/styles/components/Menu.module.css
.container {
  position: fixed;
  width: 100%;
  height: 100%;
  overflow: hidden;
  z-index: 10;
  background-color: rgba(29, 29, 29, 0.86);
}
.nav {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100%;
}
.nav li {
  display: flex;
  align-items: center;
  min-width: 170px;
  font-family: var(--code-font);
  font-size: 2em;
  margin-bottom: 15px;
  cursor: pointer;
  user-select: none;
  -webkit-user-select: none;
}
.nav li a {
  display: none;
  position: relative;
  color: var(--code-green);
  /* width: 0; */
  white-space: nowrap;
  overflow: hidden;
}
.nav li:hover a {
  display: inline-block;
  width: 3em;
  border-right: 2px solid transparent;
  animation: type 0.5s steps(6,end), blink 0.6s linear 0s infinite;
  animation-fill-mode: forwards;
  text-align: left;
}

.nav li span {
  color: var(--light-white);
}
.nav li:hover span {
  display: none;
}

@keyframes type {
  from { width: 0; }
} 

@keyframes blink { 
  70% { border-right: 2px solid var(--code-green); }
  100% { border-right: 2px solid var(--code-green); }
}

@media (max-width: 600px) {
  .nav li span {
    display: none;
  }
  .nav li a {
    display: inline-block;
  }
}

/* -------------- Play Cube -------------- */
.box-scene {
  perspective: 400px;
  -webkit-perspective: 400px;
  cursor: pointer;
  margin-bottom: 5px;
}
.box-scene:hover .box {
  transform: rotateX(90deg);
}
.box {
  width: 170px;
  height: 60px;
  position: relative;
  transform-style: preserve-3d;
  -webkit-transform-style: preserve-3d;
  transition: all 0.4s ease-out;
  transform-origin: 30px 30px -30px;
  margin: auto;
  pointer-events: none;
}
.face {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: visible; 
  transform-origin: 0 0;
  text-align: center;
  border: 1px solid var(--light-white);
  color: var(--light-white);
  display: flex;
  align-items: center;
  justify-content: center;
  pointer-events: none;
}
.side {
  transform: rotateX(-90deg);
  top: 60px;
}

/* -------------- Contact -------------- */
.contact {
  display: flex;
  flex-direction: column;
  position: absolute;
  bottom: 0;
  right: 0;
  padding: var(--gap);
}
.email {
  font-family: var(--sans-font);
  font-size: var(--font-lg);
  color: var(--light-white);
  font-weight: 100;
  letter-spacing: 2px;
}
.social {
  display: flex;
  flex-direction: column;
  margin-left: auto;
}
.social a {
  margin-bottom: 15px;
}

